syntax = "proto3";

package HyperNovaLabs.Api.Protos.Models;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "BillDescription.proto";
import "Employee.proto";

message Bill
{
    string                                                    concept           = 1;
    google.protobuf.Timestamp                                 date_from         = 2; 
    google.protobuf.Timestamp                                 date_to           = 3;
    string                                                    approved_by       = 4;
    HyperNovaLabs.Api.Protos.Models.Employee                  employee          = 5;
    repeated HyperNovaLabs.Api.Protos.Models.BillDescription  bill_descriptions = 6;
}
